# Quick-Sort-Using-Three-Modes-of-Paralleleism

./: CMakeLists.txt  Quick Sort Using Three Modes of Paralleleism  Quick Sort Using Three Modes of Paralleleism.cpp  Quick Sort Using Three Modes of Paralleleism.h  README.md  out.x  quicSort.x
