# CMakeList.txt : CMake project for Quick Sort Using Three Modes of Paralleleism, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Quick Sort Using Three Modes of Paralleleism")

# Add source to this project's executable.
add_executable (CMakeTarget "Quick Sort Using Three Modes of Paralleleism.cpp" "Quick Sort Using Three Modes of Paralleleism.h")

# TODO: Add tests and install targets if needed.
